# ChangeLog for dev-games/libsnes
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> libsnes-0.073.ebuild,
  libsnes-0.075.ebuild, libsnes-0.075-r1.ebuild:
  pkg-config is not needed.

  09 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> libsnes-0.075-r1.ebuild:
  Block on snes9x-libsnes.

*libsnes-0.075-r1 (01 Feb 2011)

  01 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> +libsnes-0.075-r1.ebuild:
  Ported to EAPI4. Purged sgb from IUSE.

*libsnes-0.075 (25 Jan 2011)

  25 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> +libsnes-0.075.ebuild,
  +files/libsnes-0.075-makefile.patch:
  Bumped.

  11 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> metadata.xml:
  Added new flags to metadata.xml.

  11 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> libsnes-0.073.ebuild:
  Added flags for profile selection. The compatibility core is used by default.
  Install libsnes.hpp header.

  28 Dec 2010; Michał Ziąbkowski <mziab@o2.pl> libsnes-0.073.ebuild:
  Fixed deps.

*libsnes-0.073 (26 Dec 2010)

  26 Dec 2010; Michał Ziąbkowski <mziab@o2.pl> +libsnes-0.073.ebuild,
  +files/libsnes-0.073-makefile.patch, +metadata.xml:
  New ebuild.
