@@ -2,8 +2,10 @@ AUX libsnes-0.073-makefile.patch 358 RMD160 e59cbb1fbb7afc5ffabe8d4b6c3c9d4c1714
 AUX libsnes-0.075-makefile.patch 574 RMD160 0fc27ac14c478a7b16ec9e48662095eba466f476 SHA1 1ff3b0f57929e44aedb76823ea8f9d0f6766b155 SHA256 48e23cde0c4818c136db96e2e74d6c85eadd806f5cbf914d74745914e80cb3ab
 DIST bsnes_v073.tar.bz2 874627 RMD160 1f93da56929fcb70cf94f1dfd470e2b321da4f86 SHA1 eb49a8fbec684eedf32a340a712b578824e60587 SHA256 6a5c2706ef1d12d97705bbfad7e3a27b5ac04ef8a6c78548b327ea3a91850056
 DIST bsnes_v075-source.tar.bz2 588228 RMD160 23d2379291831d247d0247077f0b24fb55805882 SHA1 cb9ac27c5c7d1db2f2a7014eb69c402c4287ca1a SHA256 4ce3f4591865d2e460749119744fff70836c927b18202e50d4d3855dd6f3c05c
+DIST bsnes_v076-source.tar.bz2 628918 RMD160 aa38d58a7b178736a68f859fa1fa3e59ad038c36 SHA1 2b0de3913392b8b4cd90ed8a92e7ea8b91d8a165 SHA256 1d7b7f1fd6e840150d4dc617bd834ed5343af4a60e26bc72aa587347f45c6d65
 EBUILD libsnes-0.073.ebuild 1193 RMD160 466bdadf18549ded60a8df59ea51a0a6740d62d7 SHA1 6c73ec4dad4e3e89dddf93897e85281141ec7d29 SHA256 b18170b94d92ac6bdd447f20e2f2ca54418c141ba6423b2404422287fecfa0e4
 EBUILD libsnes-0.075-r1.ebuild 1155 RMD160 1c261d3e864e0fb47e27b076afaf5eed2a8d6e8c SHA1 650836213675f4db219695918abee98d9e00ab0e SHA256 fecd8523ce724c3446dabd56f3a33800c7bf9efc0859a83f696bd754b734927f
 EBUILD libsnes-0.075.ebuild 1178 RMD160 eead0a195ab6013466fdf81becdada5d8172c365 SHA1 45398f75bb31a8276edb508e7a3643f15a6fe987 SHA256 eea90fa742aea8515cc665092911f292750e708a2ae84ec19bb974645654ac13
-MISC ChangeLog 1209 RMD160 192e64df4e217c8ddd883e9cc74e6af03a211f4f SHA1 e5b2d910e3356667cb32b49988c155512c9fe922 SHA256 afcebbf293b66c47a3178ac32eeb9ab0e201d2d02f602b6fe4626aa66a5c1213
+EBUILD libsnes-0.076.ebuild 1155 RMD160 1c261d3e864e0fb47e27b076afaf5eed2a8d6e8c SHA1 650836213675f4db219695918abee98d9e00ab0e SHA256 fecd8523ce724c3446dabd56f3a33800c7bf9efc0859a83f696bd754b734927f
+MISC ChangeLog 1322 RMD160 a13e56622d7a000ba83b16c7f4b1e3507b683baa SHA1 b426890315a1798cc86f03c3475f3f0f19f83858 SHA256 00010c4a8db70efd0e31e9d5d6a06932a30e4ab88f004f900f429e3b25a99b82
 MISC metadata.xml 558 RMD160 6f1e7a73aaf4bf49cf8da5a3d4e7cf339a458a9a SHA1 85651595141c5b457cd3372cc6e04a373efdf714 SHA256 bae95d54025eef7674357173981d7bfc1450f4c89de5e848505eef45ccaf7c19
